# Gen-AI-Job-Recommender-System

./: README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
src/: helper.py  job_api.py
